// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Action render() should render a warning about potential page deactivation in Facebook 1`] = `
<div
  className="Action d-flex align-items-baseline"
  style={
    Object {
      "paddingLeft": "NaNpx",
    }
  }
>
  <ActionSelect
    parent={1}
    value="facebookHideComment"
  />
  <ActionWarning>
    An extensive use of automatic Facebook actions may deactivate your page on Facebook!
  </ActionWarning>
</div>
`;

exports[`Action render() should render a warning about potential page deactivation in Facebook 2`] = `
<div
  className="Action d-flex align-items-baseline"
  style={
    Object {
      "paddingLeft": "NaNpx",
    }
  }
>
  <ActionSelect
    parent={2}
    value="facebookLikeComment"
  />
  <ActionWarning>
    An extensive use of automatic Facebook actions may deactivate your page on Facebook!
  </ActionWarning>
</div>
`;

exports[`Action render() should render a warning regarding team assignment 1`] = `
<div
  className="Action d-flex align-items-baseline"
  style={
    Object {
      "paddingLeft": "NaNpx",
    }
  }
>
  <ActionSelect
    parent={4}
    value="setTeamAssignee"
  />
  <span
    className="compactAction compact-action"
    key="children"
  >
    <MockedChild
      compact={true}
      key=".0"
      properties={Array []}
    />
  </span>
  <ActionWarning
    key="warning"
  >
    To set up team auto-assignment, go to the
     
    <Link
      to="/app/settings/ticket-assignment"
    >
      Ticket assignment
    </Link>
     
    page
  </ActionWarning>
</div>
`;

exports[`Action render() should render an error saying an action cannot be empty 1`] = `
<div
  className="Action"
  style={
    Object {
      "paddingLeft": "NaNpx",
    }
  }
>
  <ActionSelect
    parent={3}
    value=""
  />
  <Errors
    inline={true}
  >
    An action cannot be empty
  </Errors>
</div>
`;
